[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/main_menu.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Continue.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/spaceback.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sound/Intro.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/Start2.gd" type="Script" id=7]
[ext_resource path="res://Scenes/MenuButton.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Breaker.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Grass.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/RainbowStars.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Reset.png" type="Texture" id=12]
[ext_resource path="res://Assets/Dash.png" type="Texture" id=13]
[ext_resource path="res://Assets/Destructor.png" type="Texture" id=14]
[ext_resource path="res://Assets/RightArrow.png" type="Texture" id=15]
[ext_resource path="res://Assets/LeftArrow.png" type="Texture" id=16]
[ext_resource path="res://Assets/Interact.png" type="Texture" id=17]
[ext_resource path="res://Assets/Jump.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="main_menu" type="Sprite"]
position = Vector2( 512, 304 )
texture = ExtResource( 1 )

[node name="RainbowStars" parent="." instance=ExtResource( 11 )]
position = Vector2( -24, -216 )
amount = 50

[node name="Grass" parent="." instance=ExtResource( 10 )]
tile_data = PoolIntArray( 262133, 19, 0, 196614, 19, 0, 327669, 4, 0, 327670, 13, 0, 327671, 13, 0, 327672, 13, 0, 327673, 13, 0, 327674, 13, 0, 327675, 13, 0, 327676, 13, 0, 327677, 13, 0, 327678, 13, 0, 327679, 13, 0, 262144, 13, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 4, 0 )

[node name="Breaker" parent="." instance=ExtResource( 9 )]
position = Vector2( -128, -152 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.391
anchor_top = 0.184
anchor_right = 0.57
anchor_bottom = 0.237
margin_left = -800.384
margin_top = -371.872
margin_right = -175.68
margin_bottom = -252.096
custom_colors/default_color = Color( 1, 0.352941, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "

[center]Moonfire[/center]"
text = "

Moonfire"

[node name="Breaker2" parent="." instance=ExtResource( 9 )]
position = Vector2( 136, -152 )

[node name="Level Select" type="MenuButton" parent="."]
margin_left = -120.0
margin_top = -24.0
margin_right = 136.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Level Select"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu2" type="PopupMenu" parent="Level Select"]
margin_left = 304.0
margin_top = 64.0
margin_right = 560.0
margin_bottom = 278.0
items = [ "Earth-1", null, 0, false, false, 0, 0, null, "", false, "Earth-2", null, 0, false, false, 1, 0, null, "", false, "Earth-3", null, 0, false, false, 2, 0, null, "", false, "Space-1", null, 0, false, false, 3, 0, null, "", false, "Space-2", null, 0, false, false, 4, 0, null, "", false, "Space-3", null, 0, false, false, 5, 0, null, "", false, "Distorted Stars-1", null, 0, false, false, 6, 0, null, "", false, "Distorted Stars-2", null, 0, false, false, 7, 0, null, "", false, "Distorted Stars-3", null, 0, false, false, 8, 0, null, "", false, "Sea of Stars", null, 0, false, false, 9, 0, null, "", false, "Credits", null, 0, false, false, 10, 0, null, "", false ]

[node name="Start2" type="MenuButton" parent="."]
margin_left = -112.0
margin_top = -88.0
margin_right = 112.0
margin_bottom = -24.0
custom_fonts/font = ExtResource( 3 )
text = "Start"
script = ExtResource( 7 )

[node name="spaceback" type="Sprite" parent="Start2"]
visible = false
position = Vector2( 112, 100 )
scale = Vector2( 1, 1.03947 )
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="Start2"]
visible = false
margin_left = -352.0
margin_top = -168.0
margin_right = 544.0
margin_bottom = 368.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Controls:

Move Left = 

Move Right = 

Jump = 

Dash  = 

Interact = 

Destructor = 

Reset  = 



Double Tap to Start[/center]"
text = "Controls:

Move Left = 

Move Right = 

Jump = 

Dash  = 

Interact = 

Destructor = 

Reset  = 



Double Tap to Start"

[node name="Jump" type="Sprite" parent="Start2/RichTextLabel"]
position = Vector2( 528, 168 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )

[node name="LeftArrow" type="Sprite" parent="Start2/RichTextLabel"]
position = Vector2( 560, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="RightArrow" type="Sprite" parent="Start2/RichTextLabel"]
position = Vector2( 568, 120 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="Interact" type="Sprite" parent="Start2/RichTextLabel"]
position = Vector2( 552, 272 )
scale = Vector2( 2, 2 )
texture = ExtResource( 17 )

[node name="Dash" type="Sprite" parent="Start2/RichTextLabel"]
position = Vector2( 528, 224 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="Reset" type="Sprite" parent="Start2/RichTextLabel"]
position = Vector2( 536, 376 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="Destructor" type="Sprite" parent="Start2/RichTextLabel"]
position = Vector2( 568, 328 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[node name="MenuButton" type="MenuButton" parent="Start2"]
visible = false
margin_left = -400.0
margin_top = -216.0
margin_right = 624.0
margin_bottom = 416.0
script = ExtResource( 8 )

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Level Select" to="Level Select" method="_on_Continue_pressed"]
[connection signal="id_pressed" from="Level Select/PopupMenu2" to="Level Select" method="_on_PopupMenu2_id_pressed"]
[connection signal="pressed" from="Start2" to="Start2" method="_on_Start2_pressed"]
[connection signal="pressed" from="Start2/MenuButton" to="Start2/MenuButton" method="_on_MenuButton_pressed"]
